# fargo

./: .editorconfig  .eslintignore  .eslintrc  .gitignore  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  typeschema.config.ts
.github/workflows/: build-configuration-schema.yml  ci.yml  template-version-updater.yml
crates/api/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: start.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs
crates/core/: Cargo.toml
crates/integrations/actix/: Cargo.toml
crates/integrations/actix/src/: lib.rs
crates/integrations/axum/: Cargo.toml
crates/integrations/axum/src/: lib.rs
crates/integrations/zotera-actix/: Cargo.toml
crates/integrations/zotera-actix/src/: lib.rs
crates/integrations/zotera-axum/: Cargo.toml
crates/integrations/zotera-axum/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  server.rs
crates/zotera/: Cargo.toml
crates/zotera-cli/: Cargo.toml
crates/zotera-cli/src/commands/: mod.rs  start.rs
crates/zotera-server/: Cargo.toml
crates/zotera-server/src/: main.rs
crates/zotera/configs/: config.toml
crates/zotera/src/config/: mod.rs
esbuild-yaml/: README.md  package.json  tsup.config.ts
esbuild-yaml/src/: index.ts
esbuild-yaml/test/: index.test.ts
esbuild-yaml/test/shared/: config-utils.js
examples/actix/: Cargo.toml
examples/actix/src/: main.rs
patches/: tsup@6.2.2.patch  tsup@6.2.3.patch  tsup@6.4.0.patch  vite@3.0.0.patch  vite@3.2.3.patch
schema/: README.md
scripts/: build-configuration-schema.ts  build-configuration.ts  build-default-configuration.ts  update-versions.ts
scripts/utils/: banner.ts  create-zod-schema.ts
vscode/extension/: README.md  package.json
vscode/extension/src/: extension.ts  utils.ts
vscode/extension/src/providers/: SidebarProvider.ts
vscode/webvivew/: package.json  vite.config.ts  vite.config.ts.timestamp-1661695958620.mjs
vscode/webvivew/src/: App.tsx
