[package]
name = "zotera_cli"
version = "0.0.1"
edition = "2021"
authors = ["Lucas Nørgård"]
license = "MIT"
repository = "https://github.com/zotera/zotera"
description = "Zotera CLI"

[[bin]]
name  = "zotera"
path  = "./src/main.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.10"
log = "0.4"
env_logger = "0.10"
zotera_config = { path = "../config" }
zotera_server = { path = "../server", features = ["axum"] }
