[package]
name = "zotera_server"
version = "0.0.1"
edition = "2021"
authors = ["Lucas Nørgård"]
license = "MIT"
repository = "https://github.com/zotera/zotera"
description = "Zotera server"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
actix-web = "4"
tokio = { version = "1.0", features = ["full"] }
zotera_actix = { path = "../integrations/zotera-actix" }

