[package]
name = "zotera"
version = "0.0.1"
edition = "2021"
authors = ["Lucas Nørgård"]
license = "MIT"
repository = "https://github.com/zotera/zotera"
description = "A open-source registry for VSIX extensions"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
thiserror = "1.0"
anyhow = "1.0"
