[package]
name = "zotera_actix"
version = "0.0.1"
edition = "2021"
authors = ["Lucas Nørgård"]
license = "MIT"
repository = "https://github.com/zotera/zotera"
description = "Actix Web integration for Zotera"

[dependencies]
zotera = { path = "../../zotera" }
actix-web = "4"
tokio = { version = "1.0", features = ["full"] }
