[package]
name = "zotera_axum"
version = "0.0.1"
edition = "2021"
authors = ["Lucas Nørgård"]
license = "MIT"
repository = "https://github.com/zotera/zotera"
description = "Axum integration for Zotera"

[dependencies]
zotera = { path = "../../zotera" }
axum = { version="0.6", features=["macros"] }
tokio = { version = "1.0", features = ["full"] }
